# project-advanced-prog-cloud

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  cloudrun-deploy.yml  deploy-cloud-run.yml  docker-build.yml  docker-push.yml  docker-validate.yml  docker.yml  eden-wif-deploy-cloudrun.yml  eden-wif-gcp-deployment.yml  image-publish.yml
changelog/: CHANGELOG.md
data/: .gitkeep
docs/: DECISIONS.md  FOLDER_STRUCTURE.md  KICKOFF_PLAN.md  WORKFLOW_SUMMARY.md
src/: __init__.py  main.py
src/api/: __init__.py
src/api/routes/: rides.py
src/api/schemas/: rides.py
src/data/: __init__.py  loaders.py  persistence.py
src/domain/: Vehicle.py  __init__.py
src/services/: __init__.py  billing.py  fleet_manager.py
tests/: conftest.py  test_smoke.py
tests/api/: register.py  test_api_e2e.py  test_ride_end.py  test_ride_start.py  test_rides_active_users.py
tests/data/: test_kan30_station_loader.py
tests/domain/: test_Vehicle.py
tests/services/: test_billing.py  test_fleet_manager.py
